// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextareaWidget simple with errors 1`] = `
<DocumentFragment>
  <div
    class="flex p-0.5"
  >
    <textarea
      aria-describedby="_id__error _id__description _id__help"
      class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
      data-slot="textarea"
      id="_id"
      name="_id"
      placeholder=""
      readonly=""
      required=""
      rows="5"
    >
      value
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`TextareaWidget simple without errors 1`] = `
<DocumentFragment>
  <div
    class="flex p-0.5"
  >
    <textarea
      aria-describedby="_id__error _id__description _id__help"
      class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
      data-slot="textarea"
      id="_id"
      name="_id"
      placeholder=""
      readonly=""
      required=""
      rows="5"
    >
      value
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`TextareaWidget simple without required 1`] = `
<DocumentFragment>
  <div
    class="flex p-0.5"
  >
    <textarea
      aria-describedby="_id__error _id__description _id__help"
      class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
      data-slot="textarea"
      id="_id"
      name="_id"
      placeholder=""
      readonly=""
      rows="5"
    >
      value
    </textarea>
  </div>
</DocumentFragment>
`;
